<resources>
    <string name="app_name">Task List App</string>

    <string name="textview">TextView</string>
    <string name="add_inital_tasks">Add initial tasks</string>
    <string name="image">image</string>
    <string name="delete_all_tasks">Delete All Tasks</string>
    <string name="show_type">Show type</string>
    <string name="done_tasks">Done</string>
    <string name="undone_tasks">Undone</string>
    <string name="all_tasks">All</string>
    <string name="item_clicked">"Item clicked"</string>

    <string name="task_name">Task name</string>
    <string name="show_sheet">show sheet</string>
    <string name="input_task_name">Input task name</string>
    <string name="creating_new_task">Creating new task:</string>
    <string name="add_additional_info">Additional info:</string>
    <string name="additional_info">Description and other additional info</string>
    <string name="create_task">Create task</string>
    <string name="new_task">New task</string>
    <string name="task_is_done">Task is done</string>

    <string name="OPEN_REASON">reason</string>
    <string name="TASK_BUNDLE">task</string>
    <string name="DONE_STATUS">done_status</string>
    <string name="TASK_NAME">task_name</string>
    <string name="TASK_ADDITIONAL_INFO">additional_info</string>
    <string name="TASK_ID">ID</string>
    <string name="TASK_IMPORTANT">important_status</string>

    <string name="update_button">Update task</string>
    <string name="edit">edit</string>

    <string name="error_taskname">cannot be empty</string>
    <string name="search">Search</string>
    <string name="important">important</string>
    <string name="is_this_task_important">Is this task important?</string>
    <string name="delete">Delete</string>

</resources>
