<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#fff"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bottom_sheet_editText_TaskName"
        style="@style/TaskTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/task_name"
        app:errorEnabled="true"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottom_sheet_editText_TaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bottom_sheet_editText_AdditionalInfo"
        style="@style/TaskTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/additional_info"

        app:layout_constraintTop_toBottomOf="@id/layout_bottom_sheet_editText_TaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottom_sheet_editText_AdditionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_imoptantState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_this_task_important"
        android:textColor="@color/spacerColor"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_bottom_sheet_editText_AdditionalInfo" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_doneState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_is_done"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_imoptantState" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_CreateUpdate_Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_doneState"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

